<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.tfg.jose.proteccionpersonas.Inicio">

    <item
        android:id="@+id/bluetooth"
        android:orderInCategory="80"
        android:title="@string/bluetooth"
        android:icon="@drawable/ic_bluetooth"
        android:visible="true"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/video"
        android:orderInCategory="90"
        android:title="@string/video"
        android:icon="@drawable/ic_menu_camera"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_contactos"
        android:orderInCategory="100"
        android:title="@string/contacts"
        android:icon="@drawable/ic_contact"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_info_usuario"
        android:orderInCategory="110"
        android:title="Info usuario"
        android:icon="@drawable/ic_action_icon_info"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_password"
        android:orderInCategory="120"
        android:title="Contraseña"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_exit"
        android:orderInCategory="130"
        android:title="@string/exit"
        app:showAsAction="never" />

</menu>
