<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.tfg.jose.proteccionpersonas.InicioFragment"
    tools:showIn="@layout/activity_inicio">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/Titulo"
        android:text="@string/Titulo"/>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Titulo"
        android:layout_marginTop="10dp"
        android:id="@+id/list_view">
    </ListView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/list_view"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/Titulo_Encontrado"
        android:text="@string/Titulo_Encontrado"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Titulo_Encontrado"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:id="@+id/res_busqueda"
        android:text="@string/buscando"
        android:textColor="@color/negro"
        android:textSize="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/res_busqueda"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/res_distancia"
        android:textColor="@color/negro"
        android:textSize="40dp"/>

    <Button
        android:id="@+id/panicButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/res_distancia"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button">
    </Button>

    <SurfaceView
        android:id="@+id/surface_camera"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/res_distancia"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentLeft="true"
        android:layout_alignLeft="@+id/panicButton"
        android:visibility="invisible"/>

</RelativeLayout>
